@@ -45,6 +45,8 @@ Release 0.2.1 - Unreleased
               instead of Map (Jonathan Gray via Stack)
    HBASE-830  Debugging HCM.locateRegionInMeta is painful
    HBASE-752  HBase 0.2.1 should be based on Hadoop 0.17.2
+   HBASE-799  Deprecate all remaining methods that take Text as a parameter
+              (Jean-Daniel Cryans via Jim Kellerman)
 
   NEW FEATURES
   OPTIMIZATIONS
